--- a/desafios/desafio12-cordel-moderno/style.css
+++ b/desafios/desafio12-cordel-moderno/style.css
@@ -21,7 +21,6 @@ font-family: 'Roboto', sans-serif;
 
 header{
     background-color: black;
-    padding: 20px;
     text-align: center;
     color: white;
 }
@@ -29,12 +28,13 @@ header h1{
     font-family: var(--titulo-header);
     font-size: 8vw;
     font-weight: normal;
+    padding-top: 50px;
 }
 header p{
     font-family: var(--texto-normal);
     font-size: 1em;
     font-weight: 300;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 header a{
     text-decoration: none;
